--- a/Backend/CarService/CarService/appsettings.json
+++ b/Backend/CarService/CarService/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=CarService;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=CarService;User ID=adrian;Password=a;TrustServerCertificate=True;"
   }
 }
