Kód refaktorálás, authGuard javítása (roles string->number),  VehicleAPI DTO módosítás.  Regisztráció kiszervezve authContextbe, hasonlatosan mint a login.  AuthContext belépési pont átrakva.

--- a/Backend/CarService/CarService/appsettings.json
+++ b/Backend/CarService/CarService/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=CarService;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost;Database=CarService;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
