--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
     "@tanstack/react-router": "^1.114.27",
+    "@tanstack/react-table": "^8.21.3",
     "chart.js": "^4.4.9",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
