--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-router": "^1.114.27",
     "@tanstack/react-table": "^8.21.3",
     "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
