--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.483.0",
+    "pdfmake": "^0.2.20",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
